mylaptop/yt_ingress_example/deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-deployment-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-app
  template:
    metadata:
      labels:
        app: ingress-app
    spec:
      containers:
      - name: nginx
        image : nginx
        ports:
          - containerPort: 80
