mylaptop/yt_ingress_example/deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-deployment-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-web
  template:
    metadata:
      labels:
        app: ingress-web
    spec:
      containers:
      - name: nginx
        image : nginx
        ports:
          - containerPort: 80
