mylaptop/yt_ingress_example/services-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-service-web
spec:
  selector:
    app: ingress-web
  ports:
    - port: 80
      targetPort: 80
