mylaptop/yt_ingress_example/ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
spec:
  rules:
  - host: app.host.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ingress-service-app
              port:
                number: 80
  - host: web.host.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ingress-service-web
              port:
                number: 80
