mylaptop/yt_ingress_example/ingress_path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-path
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: app.host.com
      http:
        paths:
        - path: /app
          pathType: Prefix
          backend:
            service:
              name: ingress-service-app
              port:
                number: 80
        - path: /web
          pathType: Prefix
          backend:
            service:
              name: ingress-service-web
              port:
                number: 80
